# project-templates

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITWORKFLOW.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_drafts/: coding-workflow.md
agent/: cookiecutter.json
agent/{{cookiecutter.project_slug}}/: .env.example  README.md  agent.py  main.py  requirements.txt  tools.py
azure-container-app/: cookiecutter.json
azure-container-app/{{cookiecutter.project_slug}}/: Dockerfile  README.md
azure-container-app/{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml
basic/: cookiecutter.json
basic/{{cookiecutter.project_slug}}/: CLAUDE.md  README.md  pyproject.toml
basic/{{cookiecutter.project_slug}}/.claude/: settings.json
basic/{{cookiecutter.project_slug}}/.claude/standards/: configuration.md  error-handling.md  logging.md  security.md  telemetry.md  testing.md
basic/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  format-lint.yml  type-check.yml  unit-tests.yml
basic/{{cookiecutter.project_slug}}/src/: main.py
fastapi/: cookiecutter.json
fastapi/{{cookiecutter.project_slug}}/: README.md  main.py
mcp-server/: cookiecutter.json
mcp-server/{{cookiecutter.project_slug}}/: README.md  server.py
