[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.9.0", "mypy>=1.13.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ARG", "SIM", "ERA", "PLR", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
files = ["src"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
