[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
{%- if cookiecutter.app_config == "yes" %}
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
{%- endif %}
{%- if cookiecutter.structured_logging == "yes" %}
    "structlog>=24.4.0",
{%- endif %}
{%- if cookiecutter.telemetry == "yes" %}
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-api>=1.27.0",
{%- endif %}
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
{%- if cookiecutter.security == "yes" %}
    "bandit>=1.7.0",
{%- endif %}
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ARG", "SIM", "ERA", "PLR", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
files = ["src"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
